# shorelark-objones25

./: .gitignore
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  lib.rs
libs/genetic-algorithm/src/crossover/: uniform.rs
libs/genetic-algorithm/src/mutation/: gaussian.rs
libs/genetic-algorithm/src/selection/: roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml  README.md
libs/simulation-wasm/.cargo/: config.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  eye.rs  food.rs  lib.rs
shorelark-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
shorelark-frontend/src/: App.css  App.tsx  index.css
shorelark-frontend/src/components/: ControlPanel.tsx  SimulationCanvas.tsx  StatsPanel.tsx  WasmLoader.tsx
shorelark-frontend/src/services/: simulation.ts
shorelark-frontend/src/styles/: components.css
shorelark-frontend/src/wasm/: README.md
