[package]
name = "lib-simulation-wasm"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9"
rand_chacha = "0.9"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"

lib-simulation = { path = "../simulation" }