[package]
name = "lib-simulation"
version = "0.0.0"
edition = "2024"

[dependencies]
nalgebra = { version = "0.32", features = ["rand-no-std"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }

lib-genetic-algorithm = { path = "../genetic-algorithm" }
lib-neural-network = { path = "../neural-network" }

[dev-dependencies]
approx = "0.4"
rand_chacha = "0.9"
test-case = "1.1"